--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "axios-cache-adapter": "^2.5.0",
+    "cron": "^1.8.2",
+    "google-news-rss": "^0.4.1",
+    "node-cache": "^5.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jvectormap": "0.0.16",
     "react-scripts": "3.4.3"
   },
+  "homepage": "http://sanduteo95.github.io/world-calamity-map",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "if [ $NODE_ENV == \"production\" ]; then npm run start:prod; else npm run start:dev; fi",
+    "start:dev": "run-p client server",
+    "start:prod": "npm run server",
+    "client": "react-scripts start",
+    "server": "node-env-run server --exec nodemon | pino-colada",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node-env-run server --exec nodemon | pino-colada",
-    "dev": "run-p server start"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
@@ -41,6 +49,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
+    "gh-pages": "^3.1.0",
     "node-env-run": "^4.0.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
