add worklow and update scripts for heroky and github pages

--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "axios-cache-adapter": "^2.5.0",
     "cron": "^1.8.2",
@@ -14,19 +11,17 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jvectormap": "0.0.16",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "homepage": "http://sanduteo95.github.io/world-calamity-map",
   "scripts": {
-    "start": "if [ $NODE_ENV == \"production\" ]; then npm run start:prod; else npm run start:dev; fi",
-    "start:dev": "run-p client server",
-    "start:prod": "npm run server",
-    "client": "react-scripts start",
+    "start": "npm run server",
+    "build": "echo \"Nothing to build\"",
     "server": "node-env-run server --exec nodemon | pino-colada",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "dev": "run-p client server",
+    "client": "react-scripts start",
+    "predeploy": "react-scripts build",
     "deploy": "gh-pages -d build"
   },
   "proxy": "http://localhost:3001",
