--- a/package.json
+++ b/package.json
@@ -4,25 +4,34 @@
   "private": true,
   "dependencies": {
     "axios": "^0.20.0",
-    "axios-cache-adapter": "^2.5.0",
+    "body-parser": "^1.19.0",
+    "country-list": "^2.2.0",
+    "crawler": "^1.2.2",
     "cron": "^1.8.2",
+    "express": "^4.17.1",
+    "express-pino-logger": "^5.0.0",
     "google-news-rss": "^0.4.1",
     "node-cache": "^5.1.2",
+    "node-env-run": "^4.0.1",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jvectormap": "0.0.16",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "sentiment": "^5.0.2",
+    "textversionjs": "^1.1.3"
   },
-  "homepage": "http://sanduteo95.github.io/world-calamity-map",
   "scripts": {
-    "start": "npm run server",
-    "build": "echo \"Nothing to build\"",
-    "server": "node-env-run server --exec nodemon | pino-colada",
     "dev": "run-p client server",
-    "client": "react-scripts start",
-    "predeploy": "react-scripts build",
-    "deploy": "gh-pages -d build"
+    "prod": "npm run server",
+    "start:dev": "npm run dev",
+    "start": "npm run prod",
+    "build": "rm -rf build/ && react-scripts build",
+    "server": "node-env-run --exec nodemon | pino-colada",
+    "client": "react-scripts start"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
@@ -39,15 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-pino-logger": "^5.0.0",
-    "gh-pages": "^3.1.0",
-    "node-env-run": "^4.0.1",
-    "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
-    "pino-colada": "^2.1.0"
   }
 }
