--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-cache": "^5.1.2",
     "node-countries": "^1.5.0",
     "node-env-run": "^4.0.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0",
