--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "country-list": "^2.2.0",
     "crawler": "^1.2.2",
     "cron": "^1.8.2",
+    "d3-scale": "^3.2.3",
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
     "google-news-rss": "^0.4.1",
@@ -20,13 +21,16 @@
     "pino-colada": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-jvectormap": "0.0.16",
     "react-loading-overlay": "^1.0.1",
+    "react-minimal-pie-chart": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-simple-maps": "^2.3.0",
     "react-spinners": "^0.9.0",
+    "react-tooltip": "^4.2.10",
+    "reactjs-popup": "^2.0.4",
     "sentiment": "^5.0.2",
-    "textversionjs": "^1.1.3"
+    "wikijs": "^6.0.1"
   },
   "scripts": {
     "dev": "run-p client server",
