--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "change-api": "^1.0.2",
     "country-list": "^2.2.0",
     "crawler": "^1.2.2",
     "cron": "^1.8.2",
@@ -20,6 +21,7 @@
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0",
     "react": "^16.13.1",
+    "react-country-flag": "^2.3.0",
     "react-dom": "^16.13.1",
     "react-loading-overlay": "^1.0.1",
     "react-minimal-pie-chart": "^8.0.1",
