--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "change-api": "^1.0.2",
@@ -31,6 +34,7 @@
     "react-spinners": "^0.9.0",
     "react-tooltip": "^4.2.10",
     "reactjs-popup": "^2.0.4",
+    "request": "^2.88.2",
     "sentiment": "^5.0.2",
     "wikijs": "^6.0.1"
   },
