--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
+  pull_request:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -23,13 +23,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Deploy Node.js Express server to Heroku
-        # You may pin to the exact commit or the version
-        uses: AkhileshNS/heroku-deploy@v3.5.6
-        with:
-          # This will be used for authentication. You can find it in your heroku homepage account settings
-          heroku_api_key: ${{ secrets.HEROKU_APIKEY }}
-          # Email that you use with heroku
-          heroku_email: ${{ secrets.HEROKU_EMAIL }}
-          # The appname to use for deploying/updating
-          heroku_app_name: world-calamity-map
+      - name: Build library
+        run: npm run build
