--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "axios": "^0.20.0",
+    "axios-cache-adapter": "^2.5.0",
     "body-parser": "^1.19.0",
     "change-api": "^1.0.2",
     "country-list": "^2.2.0",
@@ -36,6 +37,7 @@
     "reactjs-popup": "^2.0.4",
     "request": "^2.88.2",
     "sentiment": "^5.0.2",
+    "underscore": "^1.11.0",
     "wikijs": "^6.0.1"
   },
   "scripts": {
