try to update state sequentially

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios-cache-adapter": "^2.5.0",
     "body-parser": "^1.19.0",
     "change-api": "^1.0.2",
+    "country-code-lookup": "0.0.18",
     "country-list": "^2.2.0",
     "crawler": "^1.2.2",
     "cron": "^1.8.2",
@@ -18,7 +19,6 @@
     "express-pino-logger": "^5.0.0",
     "google-news-rss": "^0.4.1",
     "node-cache": "^5.1.2",
-    "node-countries": "^1.5.0",
     "node-env-run": "^4.0.1",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
